Atualizando sobre educação.

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
               </p>
               <p>Portuguese</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%">100%</div>
               </div>
               <p>English</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%">60%</div>
               </div>
               <p>Spanish</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%">20%</div>
               </div>
               <br>
             </div>
@@ -123,9 +123,9 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/4C6175AA/" target="_blank">Banco PAN Java Developer (114h)</a></li>
+                <li><a href="https://www.dio.me/certificate/8CB1BE1D/" target="_blank">GFT Start #5 Java (53h)</a></li>
+                <li><a href="https://www.dio.me/certificate/62B001CC/" target="_blank">Ganhando Produtividade com Spring Framework (19h)</a></li>
               </ul>
               <hr>
             </div>
