--- a/index.html
+++ b/index.html
@@ -115,17 +115,18 @@
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
+              <h5 class="w3-opacity"><b>Sistemas da Informação</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i></h6>
+              
+              <h5 class="w3-opacity"><b>Cursos Digital Innovation One (DIO)</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>
-                Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
-                A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
-                de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
-              </p>
+              
               <ul>
+                <li><a href="Curso presencial." target="_blank">•	Academy Elogica – Simplicando tecnologias (336h) - (SQL, C#, Angular, WebApi, padrões de projeto)</a></li>
                 <li><a href="https://www.dio.me/certificate/4C6175AA/" target="_blank">Banco PAN Java Developer (114h)</a></li>
                 <li><a href="https://www.dio.me/certificate/8CB1BE1D/" target="_blank">GFT Start #5 Java (53h)</a></li>
                 <li><a href="https://www.dio.me/certificate/62B001CC/" target="_blank">Ganhando Produtividade com Spring Framework (19h)</a></li>
+                <li><a href="https://www.dio.me/certificate/62B001CC/" target="_blank">SCRUM (19h)</a></li>
               </ul>
               <hr>
             </div>
