--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Sistemas da Informação</b></h5>
+              <h5 class="w3-opacity"><b>Graduado em Sistemas de Informação</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               
               <h5 class="w3-opacity"><b>Tecnico em Desenvolvimento de Sistemas</b></h5>
@@ -128,7 +128,7 @@
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i></h6>
               
               <ul>
-                <li><a href="Curso presencial." target="_blank">•	Academy Elogica – Simplicando tecnologias (336h) - (SQL, C#, Angular, WebApi, padrões de projeto)</a></li>
+                <li><a href="Curso presencial." target="_blank">Academy Elogica – Simplicando tecnologias (336h) - (SQL, C#, Angular, WebApi, padrões de projeto)</a></li>
                 <li><a href="https://www.dio.me/certificate/4C6175AA/" target="_blank">Banco PAN Java Developer (114h)</a></li>
                 <li><a href="https://www.dio.me/certificate/8CB1BE1D/" target="_blank">GFT Start #5 Java (53h)</a></li>
                 <li><a href="https://www.dio.me/certificate/62B001CC/" target="_blank">Ganhando Produtividade com Spring Framework (19h)</a></li>
@@ -150,7 +150,7 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/feitosadev/app-angular" target="_blank">USUARIO_GITHUB/REPO</a>
               </h6>
               <p>TODO</p>
               <hr>
@@ -158,7 +158,7 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                <a href="https://github.com/feitosadev/projeto-buzzfeed" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
               <p>TODO</p>
             </div>
@@ -175,8 +175,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/feitosadev" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/jose-carlos-cavalcanti-762494177/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
       <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
       <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
